jsoup changelog

*** Release 1.7.3 [PENDING]
 * Introduced FormElement, providing easy access to form controls and their data, and the ability to submit forms
   with Jsoup.Connect.

 * Fixed support for self-closing script tags.
   <https://github.com/jhy/jsoup/issues/305>

*** Release 1.7.2 [2013-Jan-27]
 * Added support for supplementary characters outside of the Basic Multilingual Plane.
   <https://github.com/jhy/jsoup/issues/288> <https://github.com/jhy/jsoup/pull/289>

 * Added support for structural pseudo CSS selectors, including :first-child, :last-child, :nth-child, :nth-last-child,
   :first-of-type, :last-of-type, :nth-of-type, :nth-last-of-type, :only-child, :only-of-type, :empty, and :root
   <https://github.com/jhy/jsoup/pull/208>

 * Added a maximum body response size to Jsoup.Connection, to prevent running out of memory when trying to read
   extremely large documents. The default is 1MB.

 * Refactored the Cleaner to traverse rather than recurse child nodes, to avoid the risk of overflowing the stack.
   <https://github.com/jhy/jsoup/issues/246>

 * Added Element.insertChildren(), to easily insert a list of child nodes at a specific index.
   <https://github.com/jhy/jsoup/issues/239>

 * Added Node.childNodesCopy(), to create an independent copy of a Node's children.

 * When parsing in XML mode, preserve XML declarations (<?xml ... ?>).
   <https://github.com/jhy/jsoup/issues/242>

 * Introduced Parser.parseXmlFragment(), to allow easy parsing of XML fragments.
   <https://github.com/jhy/jsoup/issues/279>

 * Allow Whitelist test methods to be extended
   <https://github.com/jhy/jsoup/issues/85>

 * Added Document.OutputSettings.outline mode, to aid HTML debugging by printing out in outline mode, similar to
   browser HTML inspectors.
   <https://github.com/jhy/jsoup/issues/273>

 * When parsing, allow all tags to self-close. Tags that aren't expected to self-close will get an end tag.
   <https://github.com/jhy/jsoup/issues/258>
