@@ -7,6 +7,9 @@ jsoup changelog
  * Fixed support for self-closing script tags.
    <https://github.com/jhy/jsoup/issues/305>
 
+ * Fixed a crash when reading an unterminated CDATA section.
+   <https://github.com/jhy/jsoup/issues/349>
+
 *** Release 1.7.2 [2013-Jan-27]
  * Added support for supplementary characters outside of the Basic Multilingual Plane.
    <https://github.com/jhy/jsoup/issues/288> <https://github.com/jhy/jsoup/pull/289>
